fix to social buttons on mobile headers

--- a/txlege84/static/scss/components/_side-bar.scss
+++ b/txlege84/static/scss/components/_side-bar.scss
@@ -1,3 +1,15 @@
+.side-bar {
+  background-color: transparentize($white, .4);
+
+  @include media($medium) {
+    background-color: none;
+  }
+
+  @include media($large) {
+    background-color: none;
+  }
+}
+
 .main-header {
   h1 {
     padding-top: .25em;
