--- a/txlege84/static/scss/theme/_global.scss
+++ b/txlege84/static/scss/theme/_global.scss
@@ -70,16 +70,26 @@ h2 {
 
     i {
       color: $href-teal;
-      float: right;
-      margin: 0 0 0 .5em;
+      // float: right;
+      margin: 0 .5em 0 0;
     }
 
   }
 
   span.share {
-    float: right;
-    font-size: 1em;
-    margin-left: 1em;
+    min-width: 4em;
+
+    @include media($medium) {
+      float: right;
+      font-size: 1em;
+      margin: 0 0 0 1em;
+    }
+
+    @include media($large) {
+      float: right;
+      font-size: 1em;
+      margin: 0 0 0 1em;
+    }
   }
 
 
